# libcpuid

./: .gitignore  CMakeLists.txt  ChangeLog  FAMILY.NOTES  FUTURE  Makefile  Readme.md  build.sh  cpuid.c  cpuid.man  cpuid.proto.spec  libcpuid.h  main.cpp
